

interface IProducto
{
    string Nombre { get; }
    double Precio { get; }
    string Proveedor { get; }
}