

record class Medicamento(string Nombre, double Precio, string Proveedor): IProducto;
