public record class Staff
{
    public string Productora { get; init; }
    public string Director { get; init; }
    public string[] Reparto { get; init; }
}
