@startuml
class "Almacen`1"<T> {
    +  <<event>> OnReponerStock : Action<T> 
    + Almacen(ubicacionesDisponibles:int)
    - EstaEnAlmacen(producto:T) : bool
    + Alta(producto:T) : void
    + Baja(producto:T) : void
    + AgregaStock(producto:T, unidades:int) : void
    + RetiraStock(producto:T, unidades:int) : int
    + ResumenInventario() : string
}
class "Dictionary`2"<T1,T2> {
}
"Almacen`1" --> "Inventario<T,DatosAlmacenaje>" "Dictionary`2"
class DatosAlmacenaje {
    + Unidades : int <<get>> <<set>>
    + Ubicacion : int <<get>> <<init>>
    + DatosAlmacenaje(ubicacion:int)
}
interface IProducto {
    Nombre : string <<get>>
    Precio : double <<get>>
    Proveedor : string <<get>>
}
class Medicamento <<record>> {
    + Nombre : string <<get>> <<init>>
    + Precio : double <<get>> <<init>>
    + Proveedor : string <<get>> <<init>>
}
IProducto <|-- Medicamento
class Program {
    {static} - Main() : void
}
class Farmacia {
    - Nombre : string <<get>> <<init>>
    + Farmacia(nombre:string)
    + AvisoReposicionMedicamento(producto:IProducto) : void
    + Alta(medicamento:Medicamento) : void
    + MostrarInventario() : string
    + Reponer(medicamento:Medicamento, unidades:int) : void
    + Retirar(medicamento:Medicamento, unidades:int) : int
    + Baja(medicamento:Medicamento) : void
    + MedicamentosAgotados() : IEnumerable<IProducto>
}
class "Almacen`1"<T> {
}
Farmacia --> "Almacen<IProducto>" "Almacen`1"
class Cartelera <<static>> {
}
class "IEnumerable`1"<T> {
}
Cartelera --> "Peliculas<Pelicula>" "IEnumerable`1"
class Pelicula <<record>> {
    + Titulo : string <<get>> <<init>>
    + Año : int <<get>> <<init>>
    + Duracion : int <<get>> <<init>>
    + Pais : string <<get>> <<init>>
    + Valoracion : double <<get>> <<init>>
}
Pelicula --> "Staff" Staff
class Program {
    {static} - Consulta3() : IEnumerable<Consulta3Dto>
    {static} - Main() : void
}
class Consulta3Dto <<record>> {
    + Titulo : string <<get>> <<init>>
    + Año : int <<get>> <<init>>
    + Generos : string <<get>> <<init>>
}
Program +-- Consulta3Dto
class Staff <<record>> {
    + Productora : string <<get>> <<init>>
    + Director : string <<get>> <<init>>
}
@enduml
